[gd_scene load_steps=67 format=3 uid="uid://b78ru8wp65qp6"]

[ext_resource type="PackedScene" uid="uid://c2ij3ofp8tbjf" path="res://scenes/alt/ButtonBack.tscn" id="1"]
[ext_resource type="Script" path="res://scripts/alt/Aufgabe_16.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dveeswqio62ao" path="res://sprite/buttonstyle.png" id="4"]
[ext_resource type="Script" path="res://scripts/alt/HelpBase.gd" id="5"]
[ext_resource type="Script" path="res://scripts/alt/Exer.gd" id="6"]
[ext_resource type="Texture2D" uid="uid://dxesaj08nynda" path="res://sprite/standard.png" id="7"]
[ext_resource type="Texture2D" uid="uid://b5g0ih0pqjrji" path="res://sprite/close.png" id="8"]
[ext_resource type="Texture2D" uid="uid://d4gpvavxu7d5u" path="res://sprite/aufgabe.png" id="9"]
[ext_resource type="Texture2D" uid="uid://ye1ifhoiuhdm" path="res://sprite/16/Aufgabe.png" id="10"]
[ext_resource type="Texture2D" uid="uid://cbtyp01b7nf1p" path="res://sprite/exer.png" id="11"]
[ext_resource type="Texture2D" uid="uid://xplooqgyhlw1" path="res://sprite/try.png" id="12"]
[ext_resource type="Texture2D" uid="uid://cah4vca5mxd1w" path="res://sprite/info.png" id="13"]
[ext_resource type="Texture2D" uid="uid://skre1itg1te6" path="res://sprite/16/Funktion.png" id="14"]
[ext_resource type="PackedScene" uid="uid://buo4045ii5gj8" path="res://scenes/ButtonBack2.tscn" id="15"]
[ext_resource type="Texture2D" uid="uid://d3ds236r5edp4" path="res://sprite/16/verwendung.png" id="17"]
[ext_resource type="Texture2D" uid="uid://cubmoia5vm7xy" path="res://sprite/16/Allgemein.png" id="19"]
[ext_resource type="Texture2D" uid="uid://bsnqckfg40gpb" path="res://sprite/16/asdasd.png" id="20"]

[sub_resource type="AtlasTexture" id="17"]
atlas = ExtResource("19")
region = Rect2(0, 0, 960, 540)

[sub_resource type="AtlasTexture" id="18"]
atlas = ExtResource("19")
region = Rect2(960, 0, 960, 540)

[sub_resource type="AtlasTexture" id="19"]
atlas = ExtResource("19")
region = Rect2(1920, 0, 960, 540)

[sub_resource type="AtlasTexture" id="20"]
atlas = ExtResource("19")
region = Rect2(2880, 0, 960, 540)

[sub_resource type="AtlasTexture" id="21"]
atlas = ExtResource("19")
region = Rect2(3840, 0, 960, 540)

[sub_resource type="AtlasTexture" id="22"]
atlas = ExtResource("19")
region = Rect2(4800, 0, 960, 540)

[sub_resource type="SpriteFrames" id="23"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("17")
}, {
"duration": 1.0,
"texture": SubResource("18")
}, {
"duration": 1.0,
"texture": SubResource("19")
}, {
"duration": 1.0,
"texture": SubResource("20")
}, {
"duration": 1.0,
"texture": SubResource("21")
}, {
"duration": 1.0,
"texture": SubResource("22")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="24"]
atlas = ExtResource("14")
region = Rect2(0, 0, 572, 540)

[sub_resource type="AtlasTexture" id="25"]
atlas = ExtResource("14")
region = Rect2(572, 0, 572, 540)

[sub_resource type="AtlasTexture" id="26"]
atlas = ExtResource("14")
region = Rect2(1144, 0, 572, 540)

[sub_resource type="AtlasTexture" id="27"]
atlas = ExtResource("14")
region = Rect2(1716, 0, 572, 540)

[sub_resource type="AtlasTexture" id="28"]
atlas = ExtResource("14")
region = Rect2(2288, 0, 572, 540)

[sub_resource type="AtlasTexture" id="29"]
atlas = ExtResource("14")
region = Rect2(2860, 0, 572, 540)

[sub_resource type="AtlasTexture" id="30"]
atlas = ExtResource("14")
region = Rect2(3432, 0, 572, 540)

[sub_resource type="AtlasTexture" id="31"]
atlas = ExtResource("14")
region = Rect2(4004, 0, 572, 540)

[sub_resource type="AtlasTexture" id="32"]
atlas = ExtResource("14")
region = Rect2(4576, 0, 572, 540)

[sub_resource type="AtlasTexture" id="33"]
atlas = ExtResource("14")
region = Rect2(5148, 0, 572, 540)

[sub_resource type="AtlasTexture" id="34"]
atlas = ExtResource("14")
region = Rect2(5720, 0, 572, 540)

[sub_resource type="AtlasTexture" id="35"]
atlas = ExtResource("14")
region = Rect2(6292, 0, 572, 540)

[sub_resource type="AtlasTexture" id="36"]
atlas = ExtResource("14")
region = Rect2(6864, 0, 572, 540)

[sub_resource type="AtlasTexture" id="37"]
atlas = ExtResource("14")
region = Rect2(7436, 0, 572, 540)

[sub_resource type="AtlasTexture" id="38"]
atlas = ExtResource("14")
region = Rect2(8008, 0, 572, 540)

[sub_resource type="AtlasTexture" id="39"]
atlas = ExtResource("14")
region = Rect2(8580, 0, 572, 540)

[sub_resource type="SpriteFrames" id="40"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("24")
}, {
"duration": 1.0,
"texture": SubResource("25")
}, {
"duration": 1.0,
"texture": SubResource("26")
}, {
"duration": 1.0,
"texture": SubResource("27")
}, {
"duration": 1.0,
"texture": SubResource("28")
}, {
"duration": 1.0,
"texture": SubResource("29")
}, {
"duration": 1.0,
"texture": SubResource("30")
}, {
"duration": 1.0,
"texture": SubResource("31")
}, {
"duration": 1.0,
"texture": SubResource("32")
}, {
"duration": 1.0,
"texture": SubResource("33")
}, {
"duration": 1.0,
"texture": SubResource("34")
}, {
"duration": 1.0,
"texture": SubResource("35")
}, {
"duration": 1.0,
"texture": SubResource("36")
}, {
"duration": 1.0,
"texture": SubResource("37")
}, {
"duration": 1.0,
"texture": SubResource("38")
}, {
"duration": 1.0,
"texture": SubResource("39")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="41"]
atlas = ExtResource("17")
region = Rect2(0, 0, 886, 540)

[sub_resource type="AtlasTexture" id="42"]
atlas = ExtResource("17")
region = Rect2(886, 0, 886, 540)

[sub_resource type="AtlasTexture" id="43"]
atlas = ExtResource("17")
region = Rect2(1772, 0, 886, 540)

[sub_resource type="AtlasTexture" id="44"]
atlas = ExtResource("17")
region = Rect2(2658, 0, 886, 540)

[sub_resource type="AtlasTexture" id="45"]
atlas = ExtResource("17")
region = Rect2(3544, 0, 886, 540)

[sub_resource type="AtlasTexture" id="46"]
atlas = ExtResource("17")
region = Rect2(4430, 0, 886, 540)

[sub_resource type="SpriteFrames" id="47"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("41")
}, {
"duration": 1.0,
"texture": SubResource("42")
}, {
"duration": 1.0,
"texture": SubResource("43")
}, {
"duration": 1.0,
"texture": SubResource("44")
}, {
"duration": 1.0,
"texture": SubResource("45")
}, {
"duration": 1.0,
"texture": SubResource("46")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="48"]
atlas = ExtResource("20")
region = Rect2(0, 0, 572, 540)

[sub_resource type="AtlasTexture" id="49"]
atlas = ExtResource("20")
region = Rect2(572, 0, 572, 540)

[sub_resource type="AtlasTexture" id="50"]
atlas = ExtResource("20")
region = Rect2(1144, 0, 572, 540)

[sub_resource type="AtlasTexture" id="51"]
atlas = ExtResource("20")
region = Rect2(1716, 0, 572, 540)

[sub_resource type="AtlasTexture" id="52"]
atlas = ExtResource("20")
region = Rect2(2288, 0, 572, 540)

[sub_resource type="AtlasTexture" id="53"]
atlas = ExtResource("20")
region = Rect2(2860, 0, 572, 540)

[sub_resource type="AtlasTexture" id="54"]
atlas = ExtResource("20")
region = Rect2(3432, 0, 572, 540)

[sub_resource type="AtlasTexture" id="55"]
atlas = ExtResource("20")
region = Rect2(4004, 0, 572, 540)

[sub_resource type="AtlasTexture" id="56"]
atlas = ExtResource("20")
region = Rect2(4576, 0, 572, 540)

[sub_resource type="AtlasTexture" id="57"]
atlas = ExtResource("20")
region = Rect2(5148, 0, 572, 540)

[sub_resource type="AtlasTexture" id="58"]
atlas = ExtResource("20")
region = Rect2(5720, 0, 572, 540)

[sub_resource type="AtlasTexture" id="59"]
atlas = ExtResource("20")
region = Rect2(6292, 0, 572, 540)

[sub_resource type="AtlasTexture" id="60"]
atlas = ExtResource("20")
region = Rect2(6864, 0, 572, 540)

[sub_resource type="AtlasTexture" id="61"]
atlas = ExtResource("20")
region = Rect2(7436, 0, 572, 540)

[sub_resource type="AtlasTexture" id="62"]
atlas = ExtResource("20")
region = Rect2(8008, 0, 572, 540)

[sub_resource type="AtlasTexture" id="63"]
atlas = ExtResource("20")
region = Rect2(8580, 0, 572, 540)

[sub_resource type="AtlasTexture" id="64"]
atlas = ExtResource("20")
region = Rect2(9152, 0, 572, 540)

[sub_resource type="SpriteFrames" id="65"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("48")
}, {
"duration": 1.0,
"texture": SubResource("49")
}, {
"duration": 1.0,
"texture": SubResource("50")
}, {
"duration": 1.0,
"texture": SubResource("51")
}, {
"duration": 1.0,
"texture": SubResource("52")
}, {
"duration": 1.0,
"texture": SubResource("53")
}, {
"duration": 1.0,
"texture": SubResource("54")
}, {
"duration": 1.0,
"texture": SubResource("55")
}, {
"duration": 1.0,
"texture": SubResource("56")
}, {
"duration": 1.0,
"texture": SubResource("57")
}, {
"duration": 1.0,
"texture": SubResource("58")
}, {
"duration": 1.0,
"texture": SubResource("59")
}, {
"duration": 1.0,
"texture": SubResource("60")
}, {
"duration": 1.0,
"texture": SubResource("61")
}, {
"duration": 1.0,
"texture": SubResource("62")
}, {
"duration": 1.0,
"texture": SubResource("63")
}, {
"duration": 1.0,
"texture": SubResource("64")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Aufgabe_16" type="Node2D" groups=["saver"]]
script = ExtResource("2")

[node name="Background" type="Sprite2D" parent="."]
texture = ExtResource("7")
centered = false

[node name="Frame" type="Node2D" parent="."]
visible = false
position = Vector2(102, 217)
scale = Vector2(0.7, 0.7)

[node name="try" type="Sprite2D" parent="Frame"]
texture = ExtResource("12")

[node name="try" type="Label" parent="Frame/try"]
mouse_filter = 1
text = "probieren"

[node name="Try" type="Node2D" parent="Frame"]
z_index = 1
position = Vector2(-145.714, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("6")

[node name="Aufgabe" type="Sprite2D" parent="Frame/Try"]
texture = ExtResource("9")
centered = false

[node name="title" type="Label" parent="Frame/Try/Aufgabe"]
text = "Musik Verst√§rkung"

[node name="text" type="Label" parent="Frame/Try/Aufgabe"]
text = "Baue den Schaltplan nach und spiele dein Lied aus Aufgabe 8 mit verst√§rkter Lautst√§rke ab."

[node name="Aufgabe" type="Sprite2D" parent="Frame/Try/Aufgabe/text"]
position = Vector2(247.334, 197.5)
scale = Vector2(0.484722, 0.484722)
texture = ExtResource("10")

[node name="Buttonnext" type="Node2D" parent="Frame/Try/Aufgabe"]
position = Vector2(511, 371)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame/Try/Aufgabe/Buttonnext"]
texture = ExtResource("4")

[node name="next" type="Label" parent="Frame/Try/Aufgabe/Buttonnext/ButtonSprite"]
mouse_filter = 1
text = "weiter"

[node name="zwei" type="Node2D" parent="Frame/Try/Aufgabe"]
script = ExtResource("5")

[node name="Sprite" type="Sprite2D" parent="Frame/Try/Aufgabe/zwei"]
texture = ExtResource("9")
centered = false

[node name="Label" type="Label" parent="Frame/Try/Aufgabe/zwei/Sprite"]
text = "Taster und Lautsprecher"

[node name="Label2" type="Label" parent="Frame/Try/Aufgabe/zwei/Sprite"]
text = "Schlie√üe zwei Taster und einen Lautsprecher an. Bei Druck auf den einen soll ein tiefer Ton gespielt werden, beim anderen ein hoher Ton."

[node name="Buttonnext2" type="Node2D" parent="Frame/Try/Aufgabe/zwei"]
position = Vector2(511, 371)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame/Try/Aufgabe/zwei/Buttonnext2"]
texture = ExtResource("4")

[node name="next2" type="Label" parent="Frame/Try/Aufgabe/zwei/Buttonnext2/ButtonSprite"]
mouse_filter = 1
text = "weiter"

[node name="ButtonBack" parent="Frame/Try/Aufgabe/zwei" instance=ExtResource("15")]

[node name="drei" type="Sprite2D" parent="Frame/Try/Aufgabe/zwei"]
position = Vector2(-0.000411988, 0)
texture = ExtResource("9")
centered = false

[node name="title" type="Label" parent="Frame/Try/Aufgabe/zwei/drei"]
text = "Ein neuer Befehl"

[node name="text" type="Label" parent="Frame/Try/Aufgabe/zwei/drei"]
text = "Die Anweisung millis() beinhaltet immer die Anzahl der Millisekungen, die der Mikrocontroller schon l√§uft. Kannst du mit diesem Programm herausfinden, wie lange es etwa dauert, ein Zeichen auf den seriellen Monitor zu schreiben?
"

[node name="Label" type="Label" parent="Frame/Try/Aufgabe/zwei/drei"]
text = "long m;
void setup(){
Serial.begin(9600);
}
void loop(){
m=millis();
Serial.println(m);
}"

[node name="ButtonBack" parent="Frame/Try/Aufgabe/zwei/drei" instance=ExtResource("15")]

[node name="ButtonClose" type="Node2D" parent="Frame/Try"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame/Try/ButtonClose"]
texture = ExtResource("8")

[node name="Buttonlabel" type="Label" parent="Frame/Try/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="Frame2" type="Node2D" parent="."]
position = Vector2(290, 217)
scale = Vector2(0.7, 0.7)

[node name="exer" type="Sprite2D" parent="Frame2"]
texture = ExtResource("11")

[node name="exer" type="Label" parent="Frame2/exer"]
mouse_filter = 1
text = "pr√ºfen"

[node name="Exer" type="Node2D" parent="Frame2"]
z_index = 1
position = Vector2(-414.286, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("6")

[node name="Aufgabe" type="Sprite2D" parent="Frame2/Exer"]
texture = ExtResource("9")
centered = false

[node name="title" type="Label" parent="Frame2/Exer/Aufgabe"]
text = "Blinklicht mit Transistor"

[node name="text" type="Label" parent="Frame2/Exer/Aufgabe"]
text = "LED, 220 Ohm Widerstand, NPN-Transistor, Jumper-Kabel
Verbinde den Arduino mit dem Breadboard. Schlie√üe die LED an den Transistor an. Der l√§ngere Stift der LED (Anode) sollte mit dem Kollektor des Transistors verbunden werden und der k√ºrzere Stift (Kathode) sollte mit dem Emitter des Transistors verbunden werden. Verbinde den Basispin des Transistors √ºber den 220-Ohm-Widerstand mit dem digitalen Pin 13 des Arduino. Schlie√üe den Emitter des Transistors an den GND-Pin des Arduino an. Lade den folgenden Code auf den Arduino hoch:
void setup() {
  pinMode(13, OUTPUT);
}
void loop() {
  digitalWrite(13, HIGH);
  delay(1000);
  digitalWrite(13, LOW);
  delay(1000);
}
"

[node name="ButtonClose" type="Node2D" parent="Frame2/Exer"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/ButtonClose"]
texture = ExtResource("8")

[node name="Buttonlabel" type="Label" parent="Frame2/Exer/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonHelp1" type="Node2D" parent="Frame2/Exer"]
visible = false
position = Vector2(298, 373)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/ButtonHelp1"]
texture = ExtResource("4")

[node name="Buttonhelp" type="Label" parent="Frame2/Exer/ButtonHelp1/ButtonSprite"]
mouse_filter = 1
text = " Hilfe 1"

[node name="Help1" type="Node2D" parent="Frame2/Exer"]
visible = false
z_index = 1
position = Vector2(2.28882e-05, -4.57764e-05)

[node name="Aufgabe" type="Sprite2D" parent="Frame2/Exer/Help1"]
texture = ExtResource("7")
centered = false

[node name="ButtonClose" type="Node2D" parent="Frame2/Exer/Help1"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame2/Exer/Help1/ButtonClose"]
texture = ExtResource("8")

[node name="Buttonhelpclose" type="Label" parent="Frame2/Exer/Help1/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="Frame3" type="Node2D" parent="."]
position = Vector2(490, 217)
scale = Vector2(0.7, 0.7)

[node name="info" type="Sprite2D" parent="Frame3"]
texture = ExtResource("13")

[node name="info" type="Label" parent="Frame3/info"]
mouse_filter = 1
text = "lesen"

[node name="Info" type="Node2D" parent="Frame3"]
z_index = 1
position = Vector2(-700, -310)
scale = Vector2(1.42857, 1.42857)
script = ExtResource("6")

[node name="Aufgabe" type="Sprite2D" parent="Frame3/Info"]
texture = ExtResource("9")
centered = false

[node name="title" type="Label" parent="Frame3/Info/Aufgabe"]
text = "Transistoren"

[node name="text" type="Label" parent="Frame3/Info/Aufgabe"]
text = "Bewege die Maus √ºber die Videoclips, um sie abzuspielen."

[node name="1" type="AnimatedSprite2D" parent="Frame3/Info/Aufgabe"]
position = Vector2(207.939, 138)
scale = Vector2(0.238889, 0.238889)
sprite_frames = SubResource("23")
speed_scale = 0.5

[node name="TextureRect" type="TextureRect" parent="Frame3/Info/Aufgabe/1"]
mouse_default_cursor_shape = 2

[node name="2" type="AnimatedSprite2D" parent="Frame3/Info/Aufgabe"]
position = Vector2(413.271, 138.25)
scale = Vector2(0.245371, 0.24537)
sprite_frames = SubResource("40")
speed_scale = 0.5

[node name="TextureRect2" type="TextureRect" parent="Frame3/Info/Aufgabe/2"]
mouse_default_cursor_shape = 2

[node name="3" type="AnimatedSprite2D" parent="Frame3/Info/Aufgabe"]
position = Vector2(208.262, 282.25)
scale = Vector2(0.260185, 0.260185)
sprite_frames = SubResource("47")
speed_scale = 0.5

[node name="TextureRect3" type="TextureRect" parent="Frame3/Info/Aufgabe/3"]
mouse_default_cursor_shape = 2

[node name="4" type="AnimatedSprite2D" parent="Frame3/Info/Aufgabe"]
position = Vector2(413.828, 281.781)
scale = Vector2(0.246065, 0.254514)
sprite_frames = SubResource("65")
speed_scale = 0.5

[node name="TextureRect4" type="TextureRect" parent="Frame3/Info/Aufgabe/4"]
mouse_default_cursor_shape = 2

[node name="ButtonClose" type="Node2D" parent="Frame3/Info"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame3/Info/ButtonClose"]
texture = ExtResource("8")

[node name="Buttonlabel" type="Label" parent="Frame3/Info/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonHelp1" type="Node2D" parent="Frame3/Info"]
visible = false
position = Vector2(298, 373)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame3/Info/ButtonHelp1"]
texture = ExtResource("4")

[node name="Buttonhelp" type="Label" parent="Frame3/Info/ButtonHelp1/ButtonSprite"]
mouse_filter = 1
text = " Hilfe 1"

[node name="Help1" type="Node2D" parent="Frame3/Info"]
visible = false
z_index = 1
position = Vector2(2.28882e-05, -4.57764e-05)

[node name="Aufgabe" type="Sprite2D" parent="Frame3/Info/Help1"]
texture = ExtResource("7")
centered = false

[node name="ButtonClose" type="Node2D" parent="Frame3/Info/Help1"]
position = Vector2(574, 29)
scale = Vector2(0.4, 0.4)

[node name="ButtonSprite" type="Sprite2D" parent="Frame3/Info/Help1/ButtonClose"]
texture = ExtResource("8")

[node name="Buttonhelpclose" type="Label" parent="Frame3/Info/Help1/ButtonClose/ButtonSprite"]
mouse_filter = 1
text = "X"

[node name="ButtonBack" parent="." instance=ExtResource("1")]

[node name="Buttonstyle" type="Sprite2D" parent="."]
position = Vector2(300, 66)
texture = ExtResource("4")

[node name="Label" type="Label" parent="Buttonstyle"]
text = "Transistoren"

[connection signal="gui_input" from="Frame/try/try" to="." method="_on_try_gui_input"]
[connection signal="mouse_entered" from="Frame/try/try" to="." method="_on_try_mouse_entered"]
[connection signal="mouse_exited" from="Frame/try/try" to="." method="_on_try_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Aufgabe/Buttonnext/ButtonSprite/next" to="Frame/Try" method="_on_next_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Aufgabe/Buttonnext/ButtonSprite/next" to="Frame/Try" method="_on_next_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Aufgabe/Buttonnext/ButtonSprite/next" to="Frame/Try" method="_on_next_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/Aufgabe/zwei/Buttonnext2/ButtonSprite/next2" to="Frame/Try" method="_on_next2_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/Aufgabe/zwei/Buttonnext2/ButtonSprite/next2" to="Frame/Try" method="_on_next2_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/Aufgabe/zwei/Buttonnext2/ButtonSprite/next2" to="Frame/Try" method="_on_next2_mouse_exited"]
[connection signal="gui_input" from="Frame/Try/ButtonClose/ButtonSprite/Buttonlabel" to="Frame/Try" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame/Try/ButtonClose/ButtonSprite/Buttonlabel" to="Frame/Try" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame/Try/ButtonClose/ButtonSprite/Buttonlabel" to="Frame/Try" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame2/exer/exer" to="." method="_on_exer_gui_input"]
[connection signal="mouse_entered" from="Frame2/exer/exer" to="." method="_on_exer_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/exer/exer" to="." method="_on_exer_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/ButtonClose/ButtonSprite/Buttonlabel" to="Frame2/Exer" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame2/Exer" method="_on_Buttonhelp_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame2/Exer" method="_on_Buttonhelp_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame2/Exer" method="_on_Buttonhelp_mouse_exited"]
[connection signal="gui_input" from="Frame2/Exer/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame2/Exer" method="_on_Buttonhelpclose_gui_input"]
[connection signal="mouse_entered" from="Frame2/Exer/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame2/Exer" method="_on_Buttonhelpclose_mouse_entered"]
[connection signal="mouse_exited" from="Frame2/Exer/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame2/Exer" method="_on_Buttonhelpclose_mouse_exited"]
[connection signal="gui_input" from="Frame3/info/info" to="." method="_on_info_gui_input"]
[connection signal="mouse_entered" from="Frame3/info/info" to="." method="_on_info_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/info/info" to="." method="_on_info_mouse_exited"]
[connection signal="mouse_entered" from="Frame3/Info/Aufgabe/1/TextureRect" to="." method="_on_TextureRect_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/Aufgabe/1/TextureRect" to="." method="_on_TextureRect_mouse_exited"]
[connection signal="mouse_entered" from="Frame3/Info/Aufgabe/2/TextureRect2" to="." method="_on_TextureRect2_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/Aufgabe/2/TextureRect2" to="." method="_on_TextureRect2_mouse_exited"]
[connection signal="mouse_entered" from="Frame3/Info/Aufgabe/3/TextureRect3" to="." method="_on_TextureRect3_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/Aufgabe/3/TextureRect3" to="." method="_on_TextureRect3_mouse_exited"]
[connection signal="mouse_entered" from="Frame3/Info/Aufgabe/4/TextureRect4" to="." method="_on_TextureRect4_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/Aufgabe/4/TextureRect4" to="." method="_on_TextureRect4_mouse_exited"]
[connection signal="gui_input" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_gui_input"]
[connection signal="mouse_entered" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/ButtonClose/ButtonSprite/Buttonlabel" to="Frame3/Info" method="_on_Buttonlabel_mouse_exited"]
[connection signal="gui_input" from="Frame3/Info/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame3/Info" method="_on_Buttonhelp_gui_input"]
[connection signal="mouse_entered" from="Frame3/Info/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame3/Info" method="_on_Buttonhelp_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/ButtonHelp1/ButtonSprite/Buttonhelp" to="Frame3/Info" method="_on_Buttonhelp_mouse_exited"]
[connection signal="gui_input" from="Frame3/Info/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame3/Info" method="_on_Buttonhelpclose_gui_input"]
[connection signal="mouse_entered" from="Frame3/Info/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame3/Info" method="_on_Buttonhelpclose_mouse_entered"]
[connection signal="mouse_exited" from="Frame3/Info/Help1/ButtonClose/ButtonSprite/Buttonhelpclose" to="Frame3/Info" method="_on_Buttonhelpclose_mouse_exited"]
